[tool.poetry]
name = "github profile"
version = "0.1.0"
description = "CubeVic markdown display in the Github profile"
authors = ["CubeVic <victoraguirre.f@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
